performer API
